[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vplink-proxy-hunter"
version = "1.0.0"
description = "Smart proxy hunter — random IP brute force with VPLINK verification"
authors = [{name = "zyrogami"}]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "supabase>=2.0",
    "httpx>=0.28",
]

[tool.setuptools.packages.find]
include = ["vplink_hunter*"]

[project.scripts]
vplink-hunter = "vplink_hunter.cli:main"
